--- a/src/css/App.css
+++ b/src/css/App.css
@@ -8,7 +8,7 @@
     --main-grey: rgb(153,153,153);
 }
 
-*{
+* {
     box-sizing: border-box;
 }
 
@@ -28,7 +28,7 @@ a {
     text-decoration: none;
 }
 
-.header-container {
+.bg-container {
     width: 100vw;
     height: 100vh;
     position: relative;
@@ -49,7 +49,7 @@ a {
     margin-top: -20px;
 }
 
-.main-login-container::after {
+/* .main-login-container::after {
     content: '';
     position: absolute;
     top: 0;
@@ -58,10 +58,6 @@ a {
     height: 100%;
     background: rgba(0,0,0,0.5);
     box-shadow: inset 70px 50px 19px #000, inset -70px -50px -190px;
-}
+    z-index: 15;
+} */
 
-.header-top {
-    position: relative;
-    height: 10rem;
-    z-index: 1;
-}
